--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     <p class="pb-0 mb-0">© Copyright <span class="fw-bolder">DevFolio.</span> All Rights Reserved</p>
     <p>Designed by BootstrapMade</p>
   </footer>
-  <div id="top" class="back-to-top top">
+  <div id="top" class="top position-fixed">
     <a href="#home">
       <span class="fa-stack fa-xl">
         <i style="color:#1F88FF;" class="fa-solid fa-circle fa-stack-2x"></i>
@@ -553,9 +553,8 @@
 
 
 
-  <script src="css/bootstrap.bundle.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-  <link rel="stylesheet" href="css/bootstrap.min.js">
   <script>
     var typed = new Typed('#element', {
       strings: ['Developer', 'Designer', 'Photographer'],
@@ -572,7 +571,8 @@
       touch: false
     })
   </script>
-  <script src="css/index.js"></script>
+  <script src="js/jquery-3.7.1.min.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
